fix dropdown z-index

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -708,11 +708,12 @@ header {
     top: 60px;
     height: 0;
     width: 300px;
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
+    background: rgba(0, 252, 6, 0.53);
+    backdrop-filter: blur(5px);
     border-radius: 10px;
     overflow: hidden;
     transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    z-index: 2;
 }
 
 .dropdown_menu2.open {
@@ -746,6 +747,9 @@ header {
         display: block;
     }
 
+    .dropdown_menu2 a {
+        color: #1a1d20;
+    }
     .dropdown_menu2 {
         display: block;
     }
